sidebar router fixed

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "layout for jenny",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
   },
   "author": "Prakash Kandel",
   "license": "MIT",
@@ -12,7 +12,8 @@
     "express": "^4.15.2",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.8",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-router-dom": "^4.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.24.0",
