--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.15.2",
     "react": "^15.4.2",
+    "react-autobind": "^1.0.6",
     "react-bootstrap": "^0.30.8",
     "react-dom": "^15.4.2",
     "react-router-dom": "^4.0.0"
