--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-preset-react": "^6.24.1",
     "node-sass": "^4.5.2",
     "npm-run-all": "^4.0.2",
+    "prop-types": "^15.5.8",
     "react-autobind": "^1.0.6",
     "react-scripts": "0.9.5"
   },
