--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "layout for jenny",
   "main": "index.js",
   "scripts": {
+    "start" :"node server.js && webpack -w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Prakash Kandel",
