--- a/keycloak-authentication/docker-compose.yml
+++ b/keycloak-authentication/docker-compose.yml
@@ -1,22 +1,37 @@
-mysql:
-  image: mysql
-  environment:
-    - MYSQL_DATABASE=keycloakdb
-    - MYSQL_USER=keycloak
-    - MYSQL_PASSWORD=password
-    - MYSQL_ROOT_PASSWORD=root_password
-
-keycloak:
-  image: jboss/keycloak
-  links:
-    - mysql:mysql
-  environment:
-    - MYSQL_DATABASE=keycloakdb
-    - MYSQL_USER=keycloak
-    - MYSQL_PASSWORD=password
-    - KEYCLOAK_USER=admin 
-    - KEYCLOAK_PASSWORD=admin
-  volumes:
-    - ./themes:/opt/jboss/keycloak/themes/
-  ports:
-    - "8080:8080"
+version: '2'
+services:
+ bouncer:
+   hostname: docker-bouncer.local
+#    container_name: bouncer
+   domainname: local
+   image: outcomelife/bouncer:latest
+   links:
+     - bouncerdb:db
+  
+   environment:
+     - VIRTUAL_HOST=docker-bouncer.local
+     - VIRTUAL_PORT=8080
+     - VIRTUAL_PROTO=http
+     - VIRTUAL_NETWORK=nginx-proxy
+     - KEYCLOAK_USER=admin
+     - KEYCLOAK_PASSWORD=551Realm
+     - MYSQL_PORT_3306_TCP_ADDR=db
+     - MYSQL_PORT_3306_TCP_PORT=3306
+     - MYSQL_DATABASE=keycloakdb
+     - MYSQL_USERNAME=admin
+     - MYSQL_PASSWORD=551Realm
+   volumes:
+     - ./themes:/opt/jboss/keycloak/themes/
+#      - IMPORTEXPORT=IMPORT
+   ports:
+     - "28080:8080"
+ bouncerdb:
+   image: mysql:5.7
+   environment:
+     - MYSQL_DATABASE=keycloakdb
+     - MYSQL_USER=admin
+     - MYSQL_PASSWORD=551Realm
+     - MYSQL_ROOT_PASSWORD=551Realm
+     - ADMIN_USERNAME=admin
+     - ADMIN_PASSWORD=551Realm
+   restart: always
