--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "appversion": "^1.7.1",
     "axios": "^0.16.1",
+    "config.json": "0.0.4",
     "js-md5": "^0.4.2",
     "keycloak-js": "^3.0.0",
     "react": "^15.5.4",
