--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "layout",
+  "name": "genny",
   "version": "0.1.0",
   "private": true,
   "main": "./dist/entry.js",
@@ -10,6 +10,7 @@
     "config.json": "0.0.4",
     "js-md5": "^0.4.2",
     "keycloak-js": "^3.0.0",
+    "layout": "github:pkandel/layout",
     "react": "^15.5.4",
     "react-dom": "^15.5.4"
   },
