--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-redux": "^5.0.5",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "vertx3-eventbus-client": "^3.4.1"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
