--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "js-md5": "^0.4.2",
     "keycloak-js": "^3.0.0",
     "layout": "github:pkandel/layout",
+    "layout3": "github:pkandel/layout3",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.5",
