displaying table view

--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "appversion": "^1.7.1",
     "axios": "^0.16.1",
     "config.json": "0.0.4",
+    "genny-components": "github:pkandel/genny",
     "js-md5": "^0.4.2",
     "keycloak-js": "^3.0.0",
     "layout": "github:pkandel/layout",
+    "layout2": "github:pkandel/layout2",
+    "layout3": "github:pkandel/layout3",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.5",
