--- a/package.json
+++ b/package.json
@@ -9,11 +9,9 @@
     "axios": "^0.16.1",
     "config.json": "0.0.4",
     "genny": "github:pkandel/genny",
-    "genny-components": "github:pkandel/genny",
+    "genny-components": "github:outcomelife/genny-components",
     "js-md5": "^0.4.2",
     "keycloak-js": "^3.0.0",
-    "layout2": "github:pkandel/layout2",
-    "layout3": "github:pkandel/layout3",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.5",
