--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,11 @@
 layout:
   image: outcomelife/layout:latest
   ports:
-    - "4000:80"
+    - "5000:80"
   environment:
-    - REACT_APP_PROJECT_NAME=INTERN MATCH
+    - REACT_APP_PROJECT_NAME=Genny
     - REACT_APP_QWANDA_API_URL=https://qwanda-service.outcome-hub.com
     - REACT_APP_VERSION_NUMBER=0.9
     - REACT_APP_BUILD_DATE=2017-05-19
+    - REACT_APP_VERTX_URL=${BRIDGEHOST}/eventbus
+
